# corpusparser

./: .gitignore  README.md  approaches.ipynb  audio_reader_for_scikit_talk.ipynb  bottlenecks.ipynb  clean.ipynb  dataframe_optimization.ipynb  examples.ipynb  parallel_prototype.ipynb  pyproject.toml  scikit_talk spectrogram builder.ipynb  test_input.csv  test_output.csv
.github/workflows/: python-package-poetry.yml
corpusparser/: auxs.py  listeners.py  parsers.py
data/: README.md
tests/: test_auxs.py  test_input.csv  test_public.csv  test_public.py
