[tool.poetry]
name = "corpusparser"
version = "0.1.0"
description = ""
authors = ["Pablo Rodríguez Sánchez <pablo.rodriguez.sanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
joblib = "^1.4.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "2.0"
librosa = "^0.10.2.post1"
tqdm = "^4.67.1"
wavfile = "^4.7.2"
dask = "^2024.12.0"
graphviz = "^0.20.3"
jinja2 = "^3.1.6"
scikit-talk = "^0.1.1"
wave = "^0.0.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
nbconvert = "^7.16.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
